# quant-bot

./: .gitignore  .pre-commit-config.yaml  README.md  main.py
docs/architecture/: System_Map_Visual_v1.md
docs/blueprints/: Data_Layer_v1.md  Data_Reconciliation_Blueprint_v1.md  Infra_Execution_Blueprint_v1.md
docs/governance/: Architecture_Freeze_v1_0.md  CHANGELOG.md  Debug_QA_Governance_v1.md  IP_Security_Charter_v1_0.md
docs/ops/: Production_Runbook_v1.md
docs/vision/: Argos_Convexity_Lab_Narrative_v1_0.md
incubator/python/: pyproject.toml
production/backend/: pyproject.toml
production/backend/app/: db.py  main.py
